@@ -35,7 +35,7 @@ if (defined('MEDIAWIKI')) {
 		global $wgHooks;
 
 		if (!is_array($wgHooks)) {
-			wfDieDebugBacktrace("Global hooks array is not an array!\n");
+			wfDebugDieBacktrace("Global hooks array is not an array!\n");
 			return false;
 		}
 
@@ -44,7 +44,7 @@ if (defined('MEDIAWIKI')) {
 		}
 		
 		if (!is_array($wgHooks[$event])) {
-			wfDieDebugBacktrace("Hooks array for event '$event' is not an array!\n");
+			wfDebugDieBacktrace("Hooks array for event '$event' is not an array!\n");
 			return false;
 		}
 		
@@ -63,7 +63,7 @@ if (defined('MEDIAWIKI')) {
 			
 			if (is_array($hook)) {
 				if (count($hook) < 1) {
-					wfDieDebugBacktrace("Empty array in hooks for " . $event . "\n");
+					wfDebugDieBacktrace("Empty array in hooks for " . $event . "\n");
 				} else if (is_object($hook[0])) {
 					$object = $hook[0];
 					if (count($hook) < 2) {
@@ -82,7 +82,7 @@ if (defined('MEDIAWIKI')) {
 						$have_data = true;
 					}
 				} else {
-					wfDieDebugBacktrace("Unknown datatype in hooks for " . $event . "\n");
+					wfDebugDieBacktrace("Unknown datatype in hooks for " . $event . "\n");
 				}
 			} else if (is_string($hook)) { # functions look like strings, too
 				$func = $hook;
@@ -90,7 +90,7 @@ if (defined('MEDIAWIKI')) {
 				$object = $hook;
 				$method = "on" . $event;
 			} else {
-				wfDieDebugBacktrace("Unknown datatype in hooks for " . $event . "\n");
+				wfDebugDieBacktrace("Unknown datatype in hooks for " . $event . "\n");
 			}
 			
 			/* We put the first data element on, if needed. */
