@@ -817,6 +817,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 3643) Fix image page display of large images with resizing disabled
 * Fix meta robots tag on Special:Version again to avoid listing vulnerable
   versions for convenient harvesting by automated worms
+* (bug 3684) Fix typo in fatal error backtraces in Hooks.php
 
 
 === Caveats ===
